# ROS-FAIRy

./: .gitignore  CLAUDE.md  LICENSE  PROMPT.md  README.md  package.xml  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: design-foreign-bag-detection.md  real-robot-smoke-test.md  recovering-bad-clock-bags.md
fair_ros.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fair_ros/archive/: assembler.py  duplicates.py  index.py  locate.py  ro_crate.py
fair_ros/command/: fair.py
fair_ros/harvest/: docker_info.py  hardware_devices.py  python_env.py  ros_descriptions.py  system_info.py
fair_ros/manifest/: builder.py  quality.py  schema.py  validator.py
fair_ros/subcommands/: __init__.py  adopt.py  doctor.py  export.py  list_missions.py  mission_close.py  mission_diff.py  mission_record.py  mission_start.py  mission_status.py  repair.py  setup.py  verify.py
fair_ros/ui/: briefing.py  diff.py  review.py  status.py
fair_ros/utils/: bag_repair.py  bag_storage.py  clock.py  fsio.py  paths.py  ros_distro.py  ros_env.py  topic_health.py
fair_ros/watchdog/: fair-ros-watchdog.service  recorder_scan.py  watchdog.py
specs/: archive.md  cli.md  data_model.md  ro_crate_schema.md  watchdog.md
systemd/: fair-ros-watchdog.service
tests/: conftest.py
tests/fixtures/: README.md
tests/fixtures/real_mcap/: metadata.yaml  real_mcap_0.mcap
tests/fixtures/real_sqlite3/: metadata.yaml  real_sqlite3_0.db3
tests/integration/: test_mission_lifecycle.py  test_real_bags.py  test_ros_smoke.py
tests/unit/: test_archive.py  test_bag_repair.py  test_bag_storage.py  test_foreign_bags.py  test_hardware_devices.py  test_harvest_subprocess.py  test_manifest.py  test_paths.py  test_python_env.py  test_ro_crate_schema_example.py  test_robot_identity.py  test_ros_distro.py  test_ros_env.py  test_subcommands.py  test_topic_health.py  test_ui.py  test_verify.py  test_watchdog.py
tools/: record_real_fixtures.sh  restamp_bag.py
