# Project metadata lives in setup.py (ament_python build). This file declares
# the PEP 517 build backend and configures the dev tooling (ruff, mypy, pytest).

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
# pycodestyle (E/W), pyflakes (F), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "W", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true   # ros2cli, inotify_simple, rocrate have no stubs
exclude = ["build", "dist", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
